Document attach files (#489)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
     "Roadmap",
     "specflow",
     "specsync",
-    "VSTS"
+    "VSTS",
+    "wireframe"
   ],
   "cSpell.ignoreWords": [
     "Newtonssoft",
